fixed spacing for incidents new header

--- a/app/assets/stylesheets/components/_report_bar.scss
+++ b/app/assets/stylesheets/components/_report_bar.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 25%;
   margin: 0;
-  padding: 24px 16px 1px 16px;
+  padding: 20px 16px 1px 16px;
   text-align: center;
   z-index: 2;
 
