--- a/app/assets/stylesheets/pages/incidents/new.scss
+++ b/app/assets/stylesheets/pages/incidents/new.scss
@@ -8,10 +8,9 @@
     bottom: 8.5rem;
     z-index: 100;
     width: 90%;
-    left: 50%;
-    transform: translateX(-50%);
+    left: 5%;
   }
-  
+
   .mapboxgl-ctrl.mapboxgl-ctrl-group {
     top: 0;
     right: -0.5rem;
